//
// Copyright 2018 Signal Messenger, LLC
// SPDX-License-Identifier: AGPL-3.0-only
//

// iOS - since we use a modern proto-compiler, we must specify
// the legacy proto format.
syntax = "proto2";

// iOS - package name determines class prefix
package FingerprintProtos;

option java_package = "org.whispersystems.libsignal.fingerprint";
option java_outer_classname = "FingerprintProtos";

message LogicalFingerprint {
  // @required
  optional bytes identityData = 1;
//  optional bytes identifier = 2;
}

message LogicalFingerprints {
  // @required
  optional uint32             version           = 1;
  // @required
  optional LogicalFingerprint localFingerprint  = 2;
  // @required
  optional LogicalFingerprint remoteFingerprint = 3;
}
